--- a/src/angular/Views/service.html
+++ b/src/angular/Views/service.html
@@ -15,48 +15,51 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-8">
-            <h1>{{service.locationName}}: {{service.activityName}}</h1>
-          </div>
-          <div class="col-xs-4">
-            <img class="media-object pull-right" ng-src="{{service.partnerLogoUrl}}" onError="this.onerror=null;this.style.display='none'"/>
-          </div>
-        </div>
-        <div id="serviceDetails" class="panel panel-default">
-          <div class="panel-body">
-            <div class="row">
-              <div class="col-xs-6">
+         
+          <div class="col-xs-12">
+            <img style="float:right;margin:1em;"class="media-object" ng-src="{{service.partnerLogoUrl}}" onError="this.onerror=null;this.style.display='none'"/>
+            <div>
+              <h1>{{service.locationName}}</h1>
+              <p> {{service.activityName}}</p>
+            </div>
+          </div>        
+
+          <div id="serviceDetails" class="panel panel-default col-xs-12">
+             
+
+              <div style="padding:5px; height:100px;" class="col-xs-6">
                 <h2>{{ 'HOURS' | translate }}</h2>
                 <p data-ng-repeat="hour in hours">Open at {{hour}}</p>
               </div>
-              <div class="col-xs-6">
+              <div style="padding:5px; height:100px;" class="col-xs-6">
                 <h2>{{ 'ACTIVITY_DETAILS' | translate }}</h2>
                 <p>{{service.activityDetails}}</p>
               </div>
-            </div>
-            <div class="table-responsive">
-              <table class="table table-striped">
+              
+                
+              <table style="margin-top:1em;"class="table table-striped col-xs-12">
                 <tbody>
-                  <tr>
-                    <td class="col-xs-4">{{ 'START_DATE' | translate }}</td>
-                    <td>{{service.startDate}}</td>
+                  <tr class="col-xs-12">
+                    <td class="col-xs-6 pull-left">{{ 'START_DATE' | translate }}</td>  
+                    <td class="col-xs-6  pull-right">{{service.startDate}}</td>                     
                   </tr>
-                  <tr>
-                    <td>{{ 'END_DATE' | translate }}</td>
-                    <td>{{service.endDate}}</td>
-                  </tr>
-                  <!--<tr>
-                        <td></td>
-                        <td></td>
-                      </tr> -->
-                  <tr data-ng-repeat="property in service.properties">
-                    <td>{{property.key}}</td>
-                    <td>{{property.value}}</td>
+                  <tr class="col-xs-12">
+                    <td class="col-xs-6 pull-left">{{ 'END_DATE' | translate }}</td>                   
+                    <td class="col-xs-6 pull-right">{{service.endDate}}</td>
+                  </tr>                               
+                  <tr class="col-xs-12" data-ng-repeat="property in service.properties">
+                    <td class="col-xs-6 pull-left">{{property.key}}</td>
+                    <td class="col-xs-6 pull-right">{{property.value}}</td>
                   </tr>
                 </tbody>
               </table>
-              <a target="_blank" href="https://www.syrianrefugeeresponse.org/resources/sites/points?feature={{service.id}}">{{ 'SHOW_ON_ACTIVITYINFO' | translate }}</a>
-            </div>
-          </div>
+           
+                <a target="_blank" href="https://www.syrianrefugeeresponse.org/resources/sites/points?feature={{service.id}}">{{ 'SHOW_ON_ACTIVITYINFO' | translate }}</a>            
+              
+            
+            
+
+          </div> <!-- /service-details -->
+
         </div>
       </div>
