--- a/src/angular/Views/service.html
+++ b/src/angular/Views/service.html
@@ -15,29 +15,31 @@
           </div>
         </div>
         <div class="row">
-         
+          
+          <!-- service details header section -->
           <div class="col-xs-12">
-            <img style="float:right;margin:1em;"class="media-object" ng-src="{{service.partnerLogoUrl}}" onError="this.onerror=null;this.style.display='none'"/>
+            <img class="service-details-partner-logo" ng-src="{{service.partnerLogoUrl}}" onError="this.onerror=null;this.style.display='none'"/>
             <div>
               <h1>{{service.locationName}}</h1>
               <p> {{service.activityName}}</p>
             </div>
           </div>        
 
+          <!-- service details information section -->
           <div id="serviceDetails" class="panel panel-default col-xs-12">
              
-
-              <div style="padding:5px; height:100px;" class="col-xs-6">
+              <!-- First row  -->
+              <div class="col-xs-6 service-details-container-row-1">
                 <h2>{{ 'HOURS' | translate }}</h2>
                 <p data-ng-repeat="hour in hours">Open at {{hour}}</p>
               </div>
-              <div style="padding:5px; height:100px;" class="col-xs-6">
+              <div class="col-xs-6 service-details-container-row-1">
                 <h2>{{ 'ACTIVITY_DETAILS' | translate }}</h2>
                 <p>{{service.activityDetails}}</p>
               </div>
               
-                
-              <table style="margin-top:1em;"class="table table-striped col-xs-12">
+              <!-- Second row (Table display) -->  
+              <table class="table table-striped col-xs-12">
                 <tbody>
                   <tr class="col-xs-12">
                     <td class="col-xs-6 pull-left">{{ 'START_DATE' | translate }}</td>  
@@ -52,12 +54,12 @@
                     <td class="col-xs-6 pull-right">{{property.value}}</td>
                   </tr>
                 </tbody>
-              </table>
-           
-                <a target="_blank" href="https://www.syrianrefugeeresponse.org/resources/sites/points?feature={{service.id}}">{{ 'SHOW_ON_ACTIVITYINFO' | translate }}</a>            
-              
-            
-            
+              </table>   
+
+              <!-- third row -->    
+              <div class="col-xs-12">    
+                <a target="_blank" href="https://www.syrianrefugeeresponse.org/resources/sites/points?feature={{service.id}}">{{ 'SHOW_ON_ACTIVITYINFO' | translate }}</a>  
+              </div>
 
           </div> <!-- /service-details -->
 
